# neat-genetic-algorithm

./: CMakeLists.txt  README.md  run_test.sh
include/: Activation.hpp  Config.hpp  Crossover.hpp  FeedForwardNeuralNetwork.hpp  Genotype.hpp  Mutation.hpp  Population.hpp  Utils.hpp
src/: Crossover.cpp  FeedForwardNeuralNetwork.cpp  Genotype.cpp  Mutation.cpp  Population.cpp  crossover.cpp
tests/: test_crossover.cpp  test_cycle.cpp  test_feedforwardneuralnetwork.cpp  test_genome.cpp  test_main.cpp  test_mutation.cpp  test_population.cpp
